--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
         <div class="wrapper">
             <div class="gallery-1">
                 <img src="img/small/birds.jpg" alt="">
-            </div>
-            <div class="gallery-2">
-                <img src="img/small/birds.jpg" alt="">
-            </div>
-            <div class="gallery-3">
-                <img src="img/small/birds.jpg" alt="">
+                <img src="img/small/palace.jpg" alt="">
+                <img src="img/small/ships.jpg" alt="">
+                <img src="img/small/tower.jpg" alt="">
             </div>
         </div>
 
